tests/NormalTests/paczka1/small_fuzzy/35532598.err
Error in line 7: cGPJrhPFOXw S524 70,0
Error in line 14: cGPJrhPFOXw SW03 20,2
